--- a/web/public/assets/portal/css/dayPost.css
+++ b/web/public/assets/portal/css/dayPost.css
@@ -52,3 +52,7 @@
     border-bottom-left-radius:3px;	
     border-top:1px solid #00365a;
 }
+
+.finished {
+    background-color: #abebc6 !important;
+}
