Добавлена страница просмотра профиля, а также переход из комментариев и автора новости к профилю

--- a/web/public/assets/portal/css/site.css
+++ b/web/public/assets/portal/css/site.css
@@ -152,3 +152,15 @@ a.desc:after {
     color: #3B5998; 
     font-weight: bold;
 }
+
+a.author {
+    color: #5D7BBA;
+    text-decoration: none;
+    border-bottom: 1px #5D7BBA dashed;
+}
+
+a.author:hover {
+    color: #3B5998;
+    /*border-bottom: 1px #3B5998 solid;*/
+
+}
