--- a/web/public/assets/portal/css/menu.css
+++ b/web/public/assets/portal/css/menu.css
@@ -32,7 +32,7 @@
 .dropdown-menu {
   position: absolute;
   top: 100%;
-  left: 0;
+  /* left: 0; */
   z-index: 1000;
   display: none;
   float: left;
