Доработка календаря в верхней части сайта. Возможность внесения событий в календарь.

--- a/web/public/assets/portal/css/site.css
+++ b/web/public/assets/portal/css/site.css
@@ -170,3 +170,52 @@ a.author:hover {
     font-size: 0.8rem;
     font-weight: bolder;
 }
+
+.f-size-05 {
+    font-size: 0.5rem;
+}
+.f-size-06 {
+    font-size: 0.6rem;
+}
+.f-size-07 {
+    font-size: 0.7rem;
+}
+.f-size-08 {
+    font-size: 0.8rem;
+}
+.f-size-09 {
+    font-size: 0.9rem;
+}
+.f-size-10 {
+    font-size: 1rem;
+}
+.f-size-11 {
+    font-size: 1.1rem;
+}
+.f-size-12 {
+    font-size: 1.2rem;
+}
+.f-size-13 {
+    font-size: 1.3rem;
+}
+.f-size-14 {
+    font-size: 1.4rem;
+}
+.f-size-15 {
+    font-size: 1.5rem;
+}
+.f-size-16 {
+    font-size: 1.6rem;
+}
+.f-size-17 {
+    font-size: 1.7rem;
+}
+.f-size-18 {
+    font-size: 1.8rem;
+}
+.f-size-19 {
+    font-size: 1.9rem;
+}
+.f-size-20 {
+    font-size: 2rem;
+}
