--- a/web/public/assets/portal/css/menu.css
+++ b/web/public/assets/portal/css/menu.css
@@ -236,13 +236,6 @@ a.dropdown-item:focus,
   color: #555 !important;
   /*font-weight: 500;*/
 }
-/* #navbar-main-menu .dropdown-toggle::after {
-  display: inline-block;
-  margin-left: 0.255em;
-  vertical-align: 0.155em;
-  content: "";
-  border-top: 0.3em solid;
-  border-right: 0.3em solid transparent;
-  border-bottom: 0;
-  border-left: 0.3em solid transparent;
-} */
+.dropdown-toggle::after {
+  position: inherit !important;
+}
