--- a/web/public/assets/portal/css/menu.css
+++ b/web/public/assets/portal/css/menu.css
@@ -80,7 +80,7 @@
 .dropdown-menu > li > a:focus,
 a.dropdown-item:hover,
 a.dropdown-item:focus,
-.dropdown-submenu:hover > a,
+/*.dropdown-submenu:hover > a,*/
 .dropdown-submenu:focus > a {
   color: #ffffff;
   text-decoration: none;
@@ -196,7 +196,7 @@ a.dropdown-item:focus,
 }
 
 .dropdown-submenu:hover > a:after {
-  border-left-color: #ffffff;
+  border-left-color: #0088cc;
 }
 
 .dropdown-submenu.pull-left {
